--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "govuk-prototype-kit",
-  "description": "Rapidly create HTML prototypes of GOV.UK services",
-  "version": "9.8.0",
+  "name": "ppud-prototypes",
+  "description": "PPUD prototypes",
+  "version": "0.1",
   "private": true,
   "engines": {
     "node": "^12.0.0"
