--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "del": "^5.1.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.0",
     "express-session": "^1.13.0",
     "express-writer": "0.0.4",
     "fancy-log": "^1.3.3",
@@ -41,6 +42,7 @@
     "marked": "^0.8.2",
     "notifications-node-client": "^4.7.2",
     "nunjucks": "^3.2.1",
+    "pdf-extract": "^1.0.11",
     "portscanner": "^2.1.1",
     "require-dir": "^1.0.0",
     "sync-request": "^6.0.0",
